doc/2.4/_sources/reference/generated/ak.forms.UnmaskedForm.rst.txt
ak.forms.UnmaskedForm
---------------------

.. py:module: ak.forms.UnmaskedForm

Defined in `awkward.forms.unmaskedform <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/unmaskedform.py>`__ on `line 18 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/unmaskedform.py#L18>`__.

.. py:class:: ak.forms.UnmaskedForm(self, content, *, parameters=None, form_key=None)



.. _ak-forms-unmaskedform-is_option:

.. py:attribute:: ak.forms.UnmaskedForm.is_option
    :value: True



.. _ak-forms-unmaskedform-content:

.. py:attribute:: ak.forms.UnmaskedForm.content



.. _ak-forms-unmaskedform-copy:

.. py:method:: ak.forms.UnmaskedForm.copy(self, content=UNSET, *, parameters=UNSET, form_key=UNSET)



.. _ak-forms-unmaskedform-simplified:

.. py:method:: ak.forms.UnmaskedForm.simplified(cls, content, *, parameters=None, form_key=None)



.. _ak-forms-unmaskedform-__repr__:

.. py:method:: ak.forms.UnmaskedForm.__repr__(self)



.. _ak-forms-unmaskedform-_to_dict_part:

.. py:method:: ak.forms.UnmaskedForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-unmaskedform-type:

.. py:attribute:: ak.forms.UnmaskedForm.type



.. _ak-forms-unmaskedform-__eq__:

.. py:method:: ak.forms.UnmaskedForm.__eq__(self, other)



.. _ak-forms-unmaskedform-purelist_parameters:

.. py:method:: ak.forms.UnmaskedForm.purelist_parameters(self, *keys)



.. _ak-forms-unmaskedform-purelist_isregular:

.. py:attribute:: ak.forms.UnmaskedForm.purelist_isregular



.. _ak-forms-unmaskedform-purelist_depth:

.. py:attribute:: ak.forms.UnmaskedForm.purelist_depth



.. _ak-forms-unmaskedform-is_identity_like:

.. py:attribute:: ak.forms.UnmaskedForm.is_identity_like



.. _ak-forms-unmaskedform-minmax_depth:

.. py:attribute:: ak.forms.UnmaskedForm.minmax_depth



.. _ak-forms-unmaskedform-branch_depth:

.. py:attribute:: ak.forms.UnmaskedForm.branch_depth



.. _ak-forms-unmaskedform-fields:

.. py:attribute:: ak.forms.UnmaskedForm.fields



.. _ak-forms-unmaskedform-is_tuple:

.. py:attribute:: ak.forms.UnmaskedForm.is_tuple



.. _ak-forms-unmaskedform-dimension_optiontype:

.. py:attribute:: ak.forms.UnmaskedForm.dimension_optiontype



.. _ak-forms-unmaskedform-_columns:

.. py:method:: ak.forms.UnmaskedForm._columns(self, path, output, list_indicator)



.. _ak-forms-unmaskedform-_prune_columns:

.. py:method:: ak.forms.UnmaskedForm._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-unmaskedform-_select_columns:

.. py:method:: ak.forms.UnmaskedForm._select_columns(self, match_specifier)



.. _ak-forms-unmaskedform-_column_types:

.. py:method:: ak.forms.UnmaskedForm._column_types(self)



.. _ak-forms-unmaskedform-__setstate__:

.. py:method:: ak.forms.UnmaskedForm.__setstate__(self, state)



.. _ak-forms-unmaskedform-_expected_from_buffers:

.. py:method:: ak.forms.UnmaskedForm._expected_from_buffers(self, getkey, recursive)

